--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1443,3 +1443,36 @@ a {
 
 .btn--next {
   right: -12px; }
+
+.tooltip {
+  z-index: 99990;
+  position: absolute;
+  display: none;
+  background: #fff;
+  border: 1px solid #d0011b;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  padding: 0;
+  margin-top: -1px; }
+  .tooltip ul {
+    padding: 10px;
+    list-style: none; }
+    .tooltip ul li {
+      margin-bottom: 8px; }
+      .tooltip ul li a img {
+        width: 50px;
+        float: left; }
+      .tooltip ul li a .product-preview {
+        padding-left: 5px;
+        margin-left: 55px;
+        font-size: 12px;
+        margin-top: 10px; }
+        .tooltip ul li a .product-preview span {
+          font-weight: 600;
+          font-size: 12px; }
+        .tooltip ul li a .product-preview small {
+          font-weight: 1em;
+          display: block; }
+          .tooltip ul li a .product-preview small span {
+            color: #d0011b;
+            white-space: nowrap;
+            font-weight: 600; }
