--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -492,3 +492,53 @@
 .btn--next {
     right: -12px;
 }
+
+.tooltip {
+    z-index: 99990;
+    position: absolute;
+    display: none;
+    background: #fff;
+    border: 1px solid #d0011b;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+    padding: 0;
+    margin-top: -1px;
+
+    ul {
+        padding: 10px;
+        list-style: none;
+
+        li {
+            margin-bottom: 8px;
+
+            a {
+                img {
+                    width: 50px;
+                    float: left;
+                }
+
+                .product-preview {
+                    padding-left: 5px;
+                    margin-left: 55px;
+                    font-size: 12px;
+                    margin-top: 10px;
+
+                    span {
+                        font-weight: 600;
+                        font-size: 12px;
+                    }
+
+                    small {
+                        font-weight: 1em;
+                        display: block;
+
+                        span {
+                            color: #d0011b;
+                            white-space: nowrap;
+                            font-weight: 600;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
