--- a/views/base.pug
+++ b/views/base.pug
@@ -12,7 +12,7 @@ body
         .wrapper.container
             include partials/_section
             //- include partials/_section
-        .overlay.hidden
+        //- .overlay.hidden
         include ./cartPopup
     include partials/_footer
 
