--- a/public/scss/base/_utilities.scss
+++ b/public/scss/base/_utilities.scss
@@ -6,9 +6,9 @@
     max-width: 60px;
 }
 
-.hidden {
-    display: none;
-}
+// .hidden {
+//     display: none;
+// }
 
 .overlay {
     opacity: 0.6;
