--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -140,6 +140,8 @@
             span {
                 margin: 0 0.5em;
                 text-align: right;
+                opacity: 0.35;
+                font-weight: 300;
             }
         }
     }
