--- a/public/scss/pages/_productDetails.scss
+++ b/public/scss/pages/_productDetails.scss
@@ -189,12 +189,12 @@
     }
 }
 
-.policys {
+.services {
     border: 1px solid #ddd;
     border-radius: 3px;
 }
 
-.policy-item {
+.service-item {
     display: flex;
     align-items: center;
 
