--- a/views/base.pug
+++ b/views/base.pug
@@ -2,6 +2,7 @@ head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width,initial-scale=1")
+    link(rel='stylesheet' href='/tailwindcss/style.css')
     link(rel='stylesheet' href='/css/style.css')
     link(rel='shortcut icon' type='image/png' href='https://phukienabc.com/wp-content/uploads/2022/10/cropped-Favicon-32x32.png')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css')
