--- a/public/tailwindcss/style.css
+++ b/public/tailwindcss/style.css
@@ -477,20 +477,41 @@ video {
     max-width: 1024px;
   }
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
 .relative {
   position: relative;
 }
-.left-2 {
-  left: 0.5rem;
+.left-\[15px\] {
+  left: 15px;
 }
-.left-2\.5 {
-  left: 0.625rem;
+.left-auto {
+  left: auto;
 }
-.top-5 {
-  top: 1.25rem;
+.right-0 {
+  right: 0px;
+}
+.top-0 {
+  top: 0px;
+}
+.top-\[20px\] {
+  top: 20px;
+}
+.left-\[30px\] {
+  left: 30px;
+}
+.top-\[100px\] {
+  top: 100px;
+}
+.z-\[1100\] {
+  z-index: 1100;
+}
+.z-\[1200\] {
+  z-index: 1200;
 }
 .float-left {
   float: left;
@@ -511,13 +532,13 @@ video {
   margin-left: 0.3em;
   margin-right: 0.3em;
 }
-.mx-\[10px\] {
-  margin-left: 10px;
-  margin-right: 10px;
-}
 .mx-\[7\.5px\] {
   margin-left: 7.5px;
   margin-right: 7.5px;
+}
+.mx-\[8px\] {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 .mx-auto {
   margin-left: auto;
@@ -530,6 +551,14 @@ video {
 .my-\[20px\] {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.my-\[4px\] {
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 .-mb-\[2px\] {
   margin-bottom: -2px;
@@ -570,6 +599,9 @@ video {
 .ml-\[55px\] {
   margin-left: 55px;
 }
+.ml-\[8px\] {
+  margin-left: 8px;
+}
 .mr-\[-30px\] {
   margin-right: -30px;
 }
@@ -594,6 +626,15 @@ video {
 .mt-\[10px\] {
   margin-top: 10px;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.box-border {
+  box-sizing: border-box;
+}
 .block {
   display: block;
 }
@@ -602,6 +643,9 @@ video {
 }
 .flex {
   display: flex;
+}
+.inline-flex {
+  display: inline-flex;
 }
 .table {
   display: table;
@@ -614,6 +658,9 @@ video {
 }
 .h-\[2\.5em\] {
   height: 2.5em;
+}
+.h-\[25px\] {
+  height: 25px;
 }
 .h-\[30px\] {
   height: 30px;
@@ -642,8 +689,17 @@ video {
 .min-h-\[60px\] {
   min-height: 60px;
 }
+.min-h-\[70px\] {
+  min-height: 70px;
+}
 .w-\[200px\] {
   width: 200px;
+}
+.w-\[250px\] {
+  width: 250px;
+}
+.w-\[30px\] {
+  width: 30px;
 }
 .w-\[40px\] {
   width: 40px;
@@ -657,6 +713,12 @@ video {
 .w-full {
   width: 100%;
 }
+.w-px {
+  width: 1px;
+}
+.w-\[265px\] {
+  width: 265px;
+}
 .min-w-\[1em\] {
   min-width: 1em;
 }
@@ -665,6 +727,15 @@ video {
 }
 .min-w-\[36px\] {
   min-width: 36px;
+}
+.min-w-\[64px\] {
+  min-width: 64px;
+}
+.min-w-0 {
+  min-width: 0px;
+}
+.min-w-\[40px\] {
+  min-width: 40px;
 }
 .max-w-\[1170px\] {
   max-width: 1170px;
@@ -678,14 +749,39 @@ video {
 .max-w-\[calc\(100\%_-_30px\)\] {
   max-width: calc(100% - 30px);
 }
+.flex-\[0_0_auto\] {
+  flex: 0 0 auto;
+}
+.flex-\[1\] {
+  flex: 1;
+}
 .flex-\[1_0_20\%\] {
   flex: 1 0 20%;
+}
+.flex-\[1_0_auto\] {
+  flex: 1 0 auto;
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.shrink-0 {
+  flex-shrink: 0;
 }
 .cursor-pointer {
   cursor: pointer;
 }
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
 .list-none {
   list-style-type: none;
+}
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .grid-cols-\[5fr_4fr_3fr\] {
   grid-template-columns: 5fr 4fr 3fr;
@@ -696,17 +792,29 @@ video {
 .grid-cols-\[repeat\(4\2c 1fr\)\] {
   grid-template-columns: repeat(4,1fr);
 }
+.flex-col {
+  flex-direction: column;
+}
 .flex-nowrap {
   flex-wrap: nowrap;
 }
 .items-center {
   align-items: center;
 }
+.justify-start {
+  justify-content: flex-start;
+}
+.justify-end {
+  justify-content: flex-end;
+}
 .justify-center {
   justify-content: center;
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-visible {
+  overflow: visible;
 }
 .overflow-ellipsis {
   text-overflow: ellipsis;
@@ -720,8 +828,14 @@ video {
 .rounded-\[50\%\] {
   border-radius: 50%;
 }
+.rounded-\[5px\] {
+  border-radius: 5px;
+}
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-\[9px\] {
+  border-radius: 9px;
 }
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
@@ -764,6 +878,9 @@ video {
   --tw-border-opacity: 1;
   border-top-color: rgb(229 229 229 / var(--tw-border-opacity));
 }
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
+  background-color: rgba(0,0,0,0.1);
+}
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -772,12 +889,25 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
+.bg-transparent {
+  background-color: transparent;
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .p-\[10px\] {
   padding: 10px;
+}
+.p-\[16px\] {
+  padding: 16px;
 }
 .px-0 {
   padding-left: 0px;
@@ -799,9 +929,21 @@ video {
   padding-left: 1em;
   padding-right: 1em;
 }
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 .py-\[0\.8em\] {
   padding-top: 0.8em;
@@ -818,6 +960,22 @@ video {
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.py-\[8px\] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.px-\[16px\] {
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .\!pr-\[55px\] {
   padding-right: 55px !important;
@@ -843,6 +1001,9 @@ video {
 .pb-\[7\.5px\] {
   padding-bottom: 7.5px;
 }
+.pl-0 {
+  padding-left: 0px;
+}
 .pl-\[10px\] {
   padding-left: 10px;
 }
@@ -860,6 +1021,9 @@ video {
 }
 .pt-\[20px\] {
   padding-top: 20px;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -891,6 +1055,9 @@ video {
 .text-\[1\.5em\] {
   font-size: 1.5em;
 }
+.text-\[1\.75rem\] {
+  font-size: 1.75rem;
+}
 .text-\[12px\] {
   font-size: 12px;
 }
@@ -916,8 +1083,19 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .font-\[1em\] {
   font-weight: 1em;
+}
+.font-bold {
+  font-weight: 700;
 }
 .font-light {
   font-weight: 300;
@@ -927,6 +1105,9 @@ video {
 }
 .font-semibold {
   font-weight: 600;
+}
+.font-medium {
+  font-weight: 500;
 }
 .capitalize {
   text-transform: capitalize;
@@ -939,6 +1120,9 @@ video {
 }
 .leading-\[1\.3\] {
   line-height: 1.3;
+}
+.leading-\[1\.5\] {
+  line-height: 1.5;
 }
 .leading-\[1\.75\] {
   line-height: 1.75;
@@ -957,6 +1141,12 @@ video {
 }
 .leading-none {
   line-height: 1;
+}
+.leading-\[1\.57\] {
+  line-height: 1.57;
+}
+.leading-normal {
+  line-height: 1.5;
 }
 .tracking-\[0\] {
   letter-spacing: 0;
@@ -989,12 +1179,26 @@ video {
   --tw-text-opacity: 1;
   color: rgb(208 1 27 / var(--tw-text-opacity));
 }
+.text-\[rgb\(119\2c 126\2c 137\)\] {
+  --tw-text-opacity: 1;
+  color: rgb(119 126 137 / var(--tw-text-opacity));
+}
+.text-\[rgb\(148\2c 157\2c 178\)\] {
+  --tw-text-opacity: 1;
+  color: rgb(148 157 178 / var(--tw-text-opacity));
+}
 .text-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\] {
   color: rgba(0,0,0,0.5);
+}
+.text-inherit {
+  color: inherit;
 }
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-transparent {
+  color: transparent;
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -1003,30 +1207,52 @@ video {
 .line-through {
   text-decoration-line: line-through;
 }
+.no-underline {
+  text-decoration-line: none;
+}
 .opacity-60 {
   opacity: 0.6;
 }
 .opacity-\[0\.35\] {
   opacity: 0.35;
 }
+.opacity-40 {
+  opacity: 0.4;
+}
 .shadow-\[1px_1px_10px_rgba\(0\2c 0\2c 0\2c 0\.15\)\] {
   --tw-shadow: 1px 1px 10px rgba(0,0,0,0.15);
   --tw-shadow-colored: 1px 1px 10px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-\[rgba\(90\2c 114\2c 123\2c 0\.11\)_0px_7px_30px_0px\] {
+  --tw-shadow: rgba(90,114,123,0.11) 0px 7px 30px 0px;
+  --tw-shadow-colored: 0px 7px 30px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.transition-shadow {
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-\[1s\] {
-  transition-duration: 1s;
+.delay-\[0ms\] {
+  transition-delay: 0ms;
 }
-.duration-\[0\.7s\] {
-  transition-duration: 0.7s;
+.duration-300 {
+  transition-duration: 300ms;
 }
 .duration-\[0\.4s\] {
   transition-duration: 0.4s;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .line-clamp-2 {
   overflow: hidden;
@@ -1053,6 +1279,11 @@ video {
   }
 }
 @media (max-width: 849px) {
+
+  .md\:mx-\[10px\] {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 
   .md\:my-0 {
     margin-top: 0px;
