--- a/views/base.pug
+++ b/views/base.pug
@@ -26,11 +26,11 @@ body
 
 
         headerCart.addEventListener('click', () => {
-            fetch('/get-cart')
-                .then(function (response) {
-                    return response.json();
-                })
-                .then(function (cart) {
-                    console.log(cart);
-                });
+            //- fetch('/get-cart')
+            //-     .then(function (response) {
+            //-         return response.json();
+            //-     })
+            //-     .then(function (cart) {
+            //-         console.log(cart);
+            //-     });
         });
