--- a/views/pages/productDetails.pug
+++ b/views/pages/productDetails.pug
@@ -1,4 +1,35 @@
+
+
 extends ../base
+
+mixin product(name, imageCover, price, discount, rating, quantity, slug)
+    div(class="max-w-[20%] slide transition-transform duration-[0.4s] relative flex-[1_0_20%] p-[10px] md:flex-[1_0_calc(100%_/_3)] sm:flex-[1_0_calc(100%_/_2)]")
+        div(class="inline-block absolute left-[15px] top-[20px]")
+            span(class="block min-w-[36px] h-[36px] leading-[36px] text-center text-white text-[0.9em] rounded-[50%] bg-orange-500")= `-${discount}%`
+        a(class="cursor-pointer")
+            img(class="w-full object-cover before:content-[''] before:block before:pb-[100%]" src=`/img/products/${imageCover}` alt='')
+        div(class="text-[1.15em] px-0 py-[0.8em]")
+            a(class="mt-[0.3em] mb-[1em] text-[0.9em] leading-[1.3] h-[2.5em] overflow-ellipsis line-clamp-2 cursor-pointer" href=`${slug}`)
+            = name
+            div(class="text-[1.4rem]")
+            .product-box__rating
+                i.fa-solid.fa-star
+                i.fa-solid.fa-star
+                i.fa-solid.fa-star
+                i.fa-solid.fa-star
+                i.fa-solid.fa-star
+            div(class="text-[1.2em] leading-none")
+                -const priceRound = Math.round(price / 1000) * 1000;
+                span(class="opacity-60 text-[15px] font-normal text-[#666] line-through mr-[0.3em]")= priceRound.toLocaleString('vi-VN', { minimumFractionDigits: 0, maximumFractionDigits: 3 })
+                span.current-symbol &#x20AB;
+                -const priceDiscount = Math.round((price - (price * discount / 100)) / 1000) * 1000
+                span(class="text-[#d0011b] text-[16px]")= priceDiscount.toLocaleString('vi-VN', { minimumFractionDigits: 0, maximumFractionDigits: 3 })
+                span.current-symbol &#x20AB;
+            div(class="text-[#009627] text-[0.9em] mt-[0.5em]")
+                i(class="fa-solid fa-check mr-[3px]")
+                | Còn hàng
+
+
 
 block content 
     .container
@@ -10,12 +41,13 @@ block content
 
         div
             div(class="grid grid-cols-[5fr_4fr_3fr] pt-[20px]")
-                div(class="px-[15px] py-0")
+                div(class="px-[15px] py-0 overflow-hidden")
                     img(class="w-full mb-[15px]" src=`/img/products/${product.imageCover}`) 
-                    div(class="flex")
+                    div(class="max-w-[1140px] w-full h-[104.375px]")
                         each thumb in product.images
-                            a
-                                img(src=`/img/products/${thumb}`)
+                            div(class="inline-block p-[10px] max-w-[25%] w-full")
+                                a(class="block")
+                                    img(src=`/img/products/${thumb}`)
                 .call-to-action
                     .product-rating
                         div 
@@ -50,5 +82,47 @@ block content
                     aside(class="mb-[20px]")
                         include ../components/services
 
-            .feature-box__bottom
+    div(class="container px-[15px] py-0")
+        div(class="flex")
+            div 
+                div(class="max-w-[1170px] flex flex-wrap")
+                    div(class="relative border-t-neutral-200 mt-[10px] mb-[20px] pt-[20px] pb-0 px-0 border-t border-solid")
+                        div
+                            h2(class="text-[1.5em] leading-[1.3] font-normal mb-[0.5em]") Bài viết giới thiệu sản phẩm
+                            -const desc = product.description.split('\\n')
+                            each line in desc
+                                //- p(class="mb-[1em]")= line
+                                -const check = line.length < 80
+                                if check
+                                    h3(class="text-[14px] mb-[0.5em]")= line
+                                else
+                                    p(class="mb-[1em]")= line
+
+            div(class="w-[30%] ml-[20px] mr-0 mt-[9px] mb-0")
+                div(class="border p-[15px] border-solid border-[#333]")
+                    h2(class="border-b-neutral-200 text-[1.5em] leading-[1.3] font-normal mb-[0.5em] pb-2.5 border-b border-solid") Thông số kỹ thuật
+                    div 
+                        ul(class="list-none") 
+                            each spec in product.specs
+                                li(class="mb-[8px]")= spec.type
+                                li(class="mb-[8px]")= spec.driver
+                                li(class="mb-[8px]")= spec.effects
+                                li(class="mb-[8px]")= spec.connection
+                                li(class="mb-[8px]")= spec.earCups
+                                li(class="mb-[8px]")= spec.headband
+                                li(class="mb-[8px]")= spec.frequencyRange
+                                li(class="mb-[8px]")= spec.cable
+                                li(class="mb-[8px]")= spec.weight
+        div(class="border-t-neutral-200 border-t border-solid pb-[10px]")
+            h3(class="pt-[30px] mb-[20px] text-[1.25em]") Sản phẩm liên quan
+            div(class="max-w-[1140px] flex")
+                +product(product.name, product.imageCover, product.price, product.discount, product.rating, product.quantity, product.slug)
+                +product(product.name, product.imageCover, product.price, product.discount, product.rating, product.quantity, product.slug)
+                +product(product.name, product.imageCover, product.price, product.discount, product.rating, product.quantity, product.slug)
+                +product(product.name, product.imageCover, product.price, product.discount, product.rating, product.quantity, product.slug)
+                +product(product.name, product.imageCover, product.price, product.discount, product.rating, product.quantity, product.slug)
+                
+			
+
+
 
